alteração de slider de detalhes e inclusão de mapa

--- a/penz/detalhes.html
+++ b/penz/detalhes.html
@@ -60,7 +60,7 @@
                 </li>
               </ul>
             </div>
-            <div class="nav-item active mt-5 mt-md-0 offset-md-0 offset-2">
+            <div class="nav-item active mt-5 mt-md-0 offset-md-0 offset-3">
               <a class="nav-link animated infinite pulse delay-0s" style="#133448; color: #fff; border: #fff solid 3px;" " href=" #"=" #""="#" "">Anuncie seu imóvel
                 <span class="sr-only">(current)</span>
               </a>
@@ -139,63 +139,100 @@
               </div>
               <!-- main slider carousel nav controls -->
 
-              <ul class="carousel-indicators list-inline mx-auto border px-2">
-                <li class="list-inline-item active">
-                  <a id="carousel-selector-0" class="selected" data-slide-to="0" data-target="#myCarousel">
-                    <img src="src/imgs/capa_detalhes.jpeg" class="img-fluid">
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a id="carousel-selector-1" data-slide-to="1" data-target="#myCarousel">
-                    <img src="src/imgs/detalhes_1.jpeg" class="img-fluid">
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a id="carousel-selector-2" data-slide-to="2" data-target="#myCarousel">
-                    <img src="src/imgs/detalhes_2.jpeg" class="img-fluid">
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a id="carousel-selector-3" data-slide-to="3" data-target="#myCarousel">
-                    <img src="src/imgs/detalhes_3.jpeg" class="img-fluid">
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a id="carousel-selector-4" data-slide-to="4" data-target="#myCarousel">
-                    <img src="src/imgs/detalhes_4.jpeg" class="img-fluid">
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a id="carousel-selector-5" data-slide-to="5" data-target="#myCarousel">
-                    <img src="src/imgs/detalhes_5.jpeg" class="img-fluid">
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a id="carousel-selector-6" data-slide-to="6" data-target="#myCarousel">
-                    <img src="src/imgs/detalhes_6.jpeg" class="img-fluid">
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a id="carousel-selector-7" data-slide-to="7" data-target="#myCarousel">
-                    <img src="src/imgs/detalhes_7.jpeg" class="img-fluid">
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a id="carousel-selector-7" data-slide-to="8" data-target="#myCarousel">
-                    <img src="src/imgs/detalhes_8.jpeg" class="img-fluid">
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a id="carousel-selector-7" data-slide-to="9" data-target="#myCarousel">
-                    <img src="src/imgs/detalhes_9.jpeg" class="img-fluid">
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a id="carousel-selector-7" data-slide-to="10" data-target="#myCarousel">
-                    <img src="src/imgs/detalhes_10.jpeg" class="img-fluid">
-                  </a>
-                </li>
-              </ul>
+              <div class="container text-center my-3">
+                <div class="row mx-auto my-auto">
+                  <div id="vendasCarousel" class="carousel imoveisCarousel slide w-100" data-ride="carousel">
+                    <div class="carousel-inner vendasCarousel-inner w-100" role="listbox">
+                      <div class="carousel-item active">
+                        <div class="col-md-4">
+                          <ul class="carousel-indicators list-inline mx-auto border px-2">
+                            <li class="list-inline-item active">
+                              <a id="carousel-selector-0" class="selected" data-slide-to="0" data-target="#myCarousel">
+                                <img src="src/imgs/capa_detalhes.jpeg" class="img-fluid">
+                              </a>
+                            </li>
+                            <li class="list-inline-item">
+                              <a id="carousel-selector-1" data-slide-to="1" data-target="#myCarousel">
+                                <img src="src/imgs/detalhes_1.jpeg" class="img-fluid">
+                              </a>
+                            </li>
+                            <li class="list-inline-item">
+                              <a id="carousel-selector-2" data-slide-to="2" data-target="#myCarousel">
+                                <img src="src/imgs/detalhes_2.jpeg" class="img-fluid">
+                              </a>
+                            </li>
+                            <li class="list-inline-item">
+                              <a id="carousel-selector-3" data-slide-to="3" data-target="#myCarousel">
+                                <img src="src/imgs/detalhes_3.jpeg" class="img-fluid">
+                              </a>
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <div class="col-md-4">
+                          <ul class="carousel-indicators list-inline mx-auto border px-2">
+                            <li class="list-inline-item">
+                              <a id="carousel-selector-4" data-slide-to="4" data-target="#myCarousel">
+                                <img src="src/imgs/detalhes_4.jpeg" class="img-fluid">
+                              </a>
+                            </li>
+                            <li class="list-inline-item">
+                              <a id="carousel-selector-5" data-slide-to="5" data-target="#myCarousel">
+                                <img src="src/imgs/detalhes_5.jpeg" class="img-fluid">
+                              </a>
+                            </li>
+                            <li class="list-inline-item">
+                              <a id="carousel-selector-6" data-slide-to="6" data-target="#myCarousel">
+                                <img src="src/imgs/detalhes_6.jpeg" class="img-fluid">
+                              </a>
+                            </li>
+                            <li class="list-inline-item">
+                              <a id="carousel-selector-7" data-slide-to="7" data-target="#myCarousel">
+                                <img src="src/imgs/detalhes_7.jpeg" class="img-fluid">
+                              </a>
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <div class="col-md-4">
+                          <ul class="carousel-indicators list-inline mx-auto border px-2">
+                            <li class="list-inline-item">
+                              <a id="carousel-selector-8" data-slide-to="8" data-target="#myCarousel">
+                                <img src="src/imgs/detalhes_8.jpeg" class="img-fluid">
+                              </a>
+                            </li>
+                            <li class="list-inline-item">
+                              <a id="carousel-selector-9" data-slide-to="9" data-target="#myCarousel">
+                                <img src="src/imgs/detalhes_9.jpeg" class="img-fluid">
+                              </a>
+                            </li>
+                            <li class="list-inline-item">
+                              <a id="carousel-selector-10" data-slide-to="10" data-target="#myCarousel">
+                                <img src="src/imgs/detalhes_10.jpeg" class="img-fluid">
+                              </a>
+                            </li>
+                            <li class="list-inline-item">
+                              <a id="carousel-selector-11" data-slide-to="11" data-target="#myCarousel">
+                                <img src="src/imgs/detalhes_11.jpeg" class="img-fluid">
+                              </a>
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev w-auto" href="#vendasCarousel" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon bg-dark border border-dark rounded-circle" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next w-auto" href="#vendasCarousel" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon bg-dark border border-dark rounded-circle" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
 
@@ -300,6 +337,40 @@
         </div>
       </div>
     </div>
+    <div class="container pt-5">
+      <div class="row">
+        <div class="col-lg-10 offset-lg-1">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3477.859164733378!2d-49.73337118569332!3d-29.345122931172757!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1562248656490!5m2!1spt-BR!2sbr" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen="allowfullscreen"></iframe>
+        </div>
+      </div>
+    </div>
+    <script>
+      $('#vendasCarousel').carousel({interval: 300000})
+
+      $('.carousel .carousel-item').each(function () {
+        var minPerSlide = 3;
+        var next = $(this).next();
+        if (!next.length) {
+          next = $(this).siblings(':first');
+        }
+        next
+          .children(':first-child')
+          .clone()
+          .appendTo($(this));
+
+        for (var i = 0; i < minPerSlide; i++) {
+          next = next.next();
+          if (!next.length) {
+            next = $(this).siblings(':first');
+          }
+
+          next
+            .children(':first-child')
+            .clone()
+            .appendTo($(this));
+        }
+      });
+    </script>
     <footer class="footer_area mt-5">
       <div class="container">
         <div class="row single-footer-widget">
