--- a/penz/detalhes.html
+++ b/penz/detalhes.html
@@ -139,7 +139,7 @@
               </div>
               <!-- main slider carousel nav controls -->
 
-              <div class="container text-center my-3">
+              <div class="text-center mt-3">
                 <div class="row mx-auto my-auto">
                   <div id="vendasCarousel" class="carousel imoveisCarousel slide w-100" data-ride="carousel">
                     <div class="carousel-inner vendasCarousel-inner w-100" role="listbox">
