Atualização de dados

--- a/curriculo/index.html
+++ b/curriculo/index.html
@@ -1,179 +1,203 @@
 <!DOCTYPE html>
-<html lang="fr"><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="fr">
+		<head>
+				<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+				<meta charset="utf-8">
+				<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+				<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Rafael Minossi | Desenvolvedor Fullstack</title>
+				<title>Rafael Minossi | Desenvolvedor Fullstack</title>
 
-<link rel="stylesheet" href="files/reset.css">
-<link rel="stylesheet" media="screen and (max-width:480px)" href="files/mobile.css">
-<link rel="stylesheet" media="screen and (min-width:481px)" href="files/cv.css">
-<link rel="stylesheet" media="print" href="files/print.css">
-</head>
+				<link rel="stylesheet" href="files/reset.css">
+				<link rel="stylesheet" media="screen and (max-width:480px)" href="files/mobile.css">
+				<link rel="stylesheet" media="screen and (min-width:481px)" href="files/cv.css">
+				<link rel="stylesheet" media="print" href="files/print.css">
+		</head>
 
-<body>
+		<body>
 
-	<!-- Header -->
-	<header role="banner">
-		<div class="container_16">
-				<hgroup>
-					<h1>Rafael Carlos Minossi Nahas</h1>
-					<h2>Fullstack Developer</h2>
-				</hgroup>
+				<!-- Header -->
+				<header role="banner">
+						<div class="container_16">
+								<hgroup>
+										<h1>Rafael Carlos Minossi Nahas</h1>
+										<h2>Fullstack Developer</h2>
+								</hgroup>
 
-				<figure>
-					<img src="files/avatar.jpg" alt="Rafael Minossi photo">
-				</figure>
-		</div>
-	</header>
-	<!-- Corps -->
-	<section role="main" class="container_16 clearfix">
-		<div class="grid_16">
-			<!-- A propos -->
-			<div class="grid_8 apropos">
-				<h3>Quem sou</h3>
-				<p>Tenho 27 anos, estudante de Análise e Desenvolvimento de Sistemas, residente em Torres - RS, vidrado em tecnologia desde sempre, curioso também desde sempre. Tenho o ponto de vista de que <strong> nada é impossível</strong> de ser feito por ninguém, desde que com força de vontade e estudo.<br><br>
-				Atuo na área de desenvolvimento, como desenvolvedor Full-stack, já tendo trabalhado com prestação de serviço para grandes bancos, financeiras e cooperativas de crédito, tendo atuado em grandes projetos e implantações de software como <strong>Analista de Sistemas</strong>, <strong>Analista de Negócios</strong> e <strong>Tester</strong>.
-				<br><br> Atualmente, meus serviços estão voltados para desenvolvimento <strong>Mobile</strong> e <strong>WEB</strong>, trabalhando com o cliente desde o desenvolvimento da ideia até a implementação do sistema em produção.</p>
-				<p>Ah, para quem queira saber e ache relevante, sou <strong>PNE</strong> (Portador de Necessidades Especiais) devido à uma queda de bicicleta aos 8 anos, possuo Hemiparesia à esquerda.</p>
-			</div>
-			
-			<!-- Compétences -->
-			<div class="grid_8 competences">
-				<h3>Competências</h3>
-				<ul class="barres">
-					<li data-skills="80">HTML / CSS<span style="width: 80%;"></span></li>
-					<li data-skills="80">JavaScript<span style="width: 80%;"></span></li>
-					<li data-skills="60">Java<span style="width: 60%;"></span></li>
-					<li data-skills="60">PHP<span style="width: 60%;"></span></li>
-					<li data-skills="70">Node.js (Express | AdonnisJs | API)<span style="width: 70%;"></span></li>
-					<li data-skills="60">React.JS<span style="width: 60%;"></span></li>
-					<li data-skills="50">Swift<span style="width: 50%;"></span></li>
-					<li data-skills="60">Android<span style="width: 60%;"></span></li>
-					<li data-skills="60">Flutter<span style="width: 60%;"></span></li>
-					<li data-skills="80">SQL<span style="width: 80%;"></span></li>
-					<li data-skills="80">Oracle<span style="width: 80%;"></span></li>
-					<li data-skills="50">MongoDB<span style="width: 50%;"></span></li>
-					<li data-skills="90">Versionamento<span style="width: 90%;"></span></li>
-					<li data-skills="70">Jboss<span style="width: 70%;"></span></li>
-					<li data-skills="70">Tomcat<span style="width: 70%;"></span></li>
+								<figure>
+										<img src="files/avatar.jpg" alt="Rafael Minossi photo">
+								</figure>
+						</div>
+				</header>
+				<!-- Corps -->
+				<section role="main" class="container_16 clearfix">
+						<div class="grid_16">
+								<!-- A propos -->
+								<div class="grid_8 apropos">
+										<h3>Quem sou</h3>
+										<p>Tenho 28 anos, estudante de Análise e Desenvolvimento de Sistemas, residente em Torres - RS, vidrado em tecnologia desde sempre, curioso também desde sempre. Tenho o ponto de vista de que
+												<strong>
+														nada é impossível</strong>
+												de ser feito por ninguém, desde que com força de vontade e estudo.<br><br>
+												Atuo na área de desenvolvimento, como desenvolvedor Full-stack, já tendo trabalhado com prestação de serviço para grandes bancos, financeiras e cooperativas de crédito, tendo atuado em grandes projetos e implantações de software como
+												<strong>Analista de Sistemas</strong>,
+												<strong>Analista de Negócios</strong>
+												e
+												<strong>Tester</strong>.
+												<br><br>
+												Atualmente, meus serviços estão voltados para desenvolvimento
+												<strong>Mobile</strong>
+												e
+												<strong>WEB</strong>, trabalhando com o cliente desde o desenvolvimento da ideia até a implementação do sistema em produção.</p>
+										<p>Ah, para quem queira saber e ache relevante, sou
+												<strong>PNE</strong>
+												(Portador de Necessidades Especiais) devido à uma queda de bicicleta aos 8 anos, possuo Hemiparesia à esquerda.</p>
+								</div>
 
-				</ul>
-			</div>
-		</div>
-		
-			<!-- Expériences -->
-			<div class="grid_16 experiences">
-				<h3>Experiências</h3>
-				<ul>
-					<li>
-						<h4><strong>Lojas taQi</strong> - Vendedor</h4><br>
-						<span class="lieu">Torres, RS</span>
-						<span class="dates">10/2017 - Atualmente</span>
-						<p>Atuo como vendedor interno de varejo, prestando 
-							o atendimento ao cliente passivamente e também ativamente, 
-							instigando a necessidade de mais do que vieram buscar e 
-							ativando clientes através de sugestões, perguntas e 
-							convites à loja através de ligações e pelo Whatsapp.</p>
-					</li>
-					<li>
-						<h4><strong>TOTVS SA</strong> Consultor (PJ)</h4><br>
-						<span class="lieu">Porto Alegre, RS</span>
-						<span class="dates">06/2015 - 06/2017</span>
-						<p>Atuei no desenvolvimento e manutenção em sistemas JAVA Web e Android​, 
-							confecção de scripts para envio ao cliente, teste e homologação de software, 
-							análise de logs, inconsistências e dúvidas enviadas pelos clientes, 
-							análise de requisitos, confecção de documentos de Visão e Orçamentos, 
-							desenvolvimento de indicadores de produtividade / qualidade, 
-							sugerir novos processos, desenvolvimento de análises críticas para melhoria dos processos existentes, 
-							Gestão e atendimento a clientes de Financial Services e Core Banking, palestras, treinamentos, 
-							apoio e gestão de equipes e processos.</p>
-					</li>
-					<li>
-						<h4><strong>Unilider LTDA</strong> Analista de Trade Marketing</h4><br>
-						<span class="lieu">Serra, ES</span>
-						<span class="dates">11/2014 - 05/2015</span>
-						<p>Atuei no controle e divulgação de informações através do uso de Tabelas Dinâmicas e BI, 
-							uso avançado do Excel, Análise e controle de verbas, Análise de pedidos. 
-							Parametrização e envio de relatórios diários, Análise de dados de venda (volume e positivação), 
-							projeto BI Portal WEB, consultas à banco de dados e organização de eventos.</p>
-					</li>
-					<li>
-						<h4><strong>TOTVS SA</strong> Analista de Negócios</h4><br>
-						<span class="lieu">Porto Alegre, RS</span>
-						<span class="dates">09/2013 - 09/2014</span>
-						<p>Atuei no desenvolvimento de indicadores de produtividade/qualidade e aspectos do negócio 
-							que devem ser monitorados, sugerir novos processos, desenvolvimento de análises críticas 
-							para melhoria dos processos existentes, gestão e atendimento a clientes de Financial Services e Core Banking, 
-							elaboração de planilhas, palestras e documentos gerenciais com indicadores, apoio e gestão de equipes e processos, 
-							análise de logs, inconsistências e dúvidas enviadas pelos clientes, apoio em 
-							desenvolvimento JAVA e todo processo de sustentação.</p>
-					</li>
-				</ul>
-			</div>
-		
-			<!-- Formations -->
-			<div class="grid_16 formations">
-				<h3>Formação e cursos</h3>
-				<ul>
-					<li>
-						<h4><strong>Tecnólogo em Análise e Desenvolvimento de Sistemas</strong> - ULBRA</h4>
-						<span class="lieu">Torres, RS</span>
-						<span class="dates"> 07/2018 - 06/2021</span>
-						<p>O Curso Superior de Tecnologia em Análise e Desenvolvimento de Sistemas da Ulbra forma profissionais capazes de desenvolver
-								sistemas utilizando os mais modernos ambientes de programação disponíveis no mercado da Tecnologia da Informação.</p>
-					</li>
-					<li>
-						<h4><strong>Ciências Contábeis</strong> Univix</h4>
-						<span class="lieu">Vitória, ES</span>
-						<span class="dates">07/2012 - 07/2013</span>
-						<p>O Curso de Ciências Contábeis tem como objetivo principal desenvolver um perfil de profissional 
-							apto a assumir e desempenhar funções de contabilista com responsabilidade social e ética 
-							contribuindo para que as empresas atinjam seus objetivos e mantenha-se competitivas no mercado.</p>
-					</li>
-					<li>
-						<h4><strong>IOS Swift - Desenvolvimento Mobile</strong> TargetTrust</h4>
-						<span class="lieu">Porto Alegre, RS</span>
-						<span class="dates">11/2016 - 12/2016</span>
-						<p>- 40h</p>
-					</li>
-					<li>
-						<h4><strong>Jquery - Criando Aplicações Web Ricas</strong> TargetTrust</h4>
-						<span class="lieu">Porto Alegre, RS</span>
-						<span class="dates">10/2016 - 11/2016</span>
-						<p>- 40h</p>
-					</li>
-				</ul>
-			</div>
-		
-			<!-- Loisirs -->
-			<div class="grid_8 loisirs">
-				<h3>Habilidades</h3>
-				<p> Autodidata</p>
-				<p>Trabalho em equipe</p>
-				<p>Rápido aprendizado</p>
-				<p>Esforçado</p>
-			</div>
-		
-			<!-- Contact -->
-			<div class="grid_8 contact">
-				<h3>Contato</h3>
-				<ul>
-					<li class="lieu">Torres, Rio Grande do Sul - BR</li>
-					<li class="phone">(51) 9.8043-6739</li>
-					<li class="mail"><a href="mailto:rafaelminossi@rede.ulbra.br">rafaelminossi@rede.ulbra.br</a></li>
-					<li class="site"><a href="http://www.githug.com/rminossi">githug.com/rminossi</a></li>
-					<li class="form"><a class="toContactform" href="https://www.linkedin.com/in/rafael-minossi-nahas-792b5622/">Linkedin</a></li>
-				</ul>
-			</div>
-	</section>
+								<!-- Compétences -->
+								<div class="grid_8 competences">
+										<h3>Competências</h3>
+										<ul class="barres">
+												<li data-skills="80">HTML / CSS<span style="width: 80%;"></span></li>
+												<li data-skills="80">JavaScript<span style="width: 80%;"></span></li>
+												<li data-skills="60">Java<span style="width: 60%;"></span></li>
+												<li data-skills="60">PHP<span style="width: 60%;"></span></li>
+												<li data-skills="70">Node.js (Express | AdonnisJs | API)<span style="width: 70%;"></span></li>
+												<li data-skills="60">React.JS<span style="width: 60%;"></span></li>
+												<li data-skills="50">Swift<span style="width: 50%;"></span></li>
+												<li data-skills="60">Android<span style="width: 60%;"></span></li>
+												<li data-skills="60">Flutter<span style="width: 60%;"></span></li>
+												<li data-skills="80">SQL<span style="width: 80%;"></span></li>
+												<li data-skills="80">Oracle<span style="width: 80%;"></span></li>
+												<li data-skills="50">MongoDB<span style="width: 50%;"></span></li>
+												<li data-skills="90">Versionamento<span style="width: 90%;"></span></li>
+												<li data-skills="70">Jboss<span style="width: 70%;"></span></li>
+												<li data-skills="70">Tomcat<span style="width: 70%;"></span></li>
 
-<!-- Scripts JavaScript -->
-<script src="files/jquery-1.js"></script>
-<script src="files/validate.js"></script>
-<script src="files/plugins.js"></script>
+										</ul>
+								</div>
+						</div>
 
-</body>
+						<!-- Expériences -->
+						<div class="grid_16 experiences">
+								<h3>Experiências</h3>
+								<ul>
+										<li>
+												<h4>
+														<strong>Autônomo</strong>
+														- Desenvolvedor Freelancer</h4><br>
+												<span class="lieu">Torres, RS</span>
+												<span class="dates">05/2019 - Atualmente</span>
+												<p>Atuo como Desenvolvedor Freelancer, para serviços temporários, tendo nesse meio tempo, trabalhado em projetos utilizando Laravel, Angular, ReactJs, Node, PHP e HTML/CSS.</p>
+										</li>
+										<li>
+												<h4>
+														<strong>Lojas taQi</strong>
+														- Vendedor</h4><br>
+												<span class="lieu">Torres, RS</span>
+												<span class="dates">10/2017 - 06/2019</span>
+												<p>Atuei como vendedor interno de varejo, prestando o atendimento ao cliente passivamente e também ativamente, instigando a necessidade de mais do que vieram buscar e ativando clientes através de sugestões, perguntas e convites à loja através de ligações e pelo Whatsapp.</p>
+										</li>
+										<li>
+												<h4>
+														<strong>TOTVS SA</strong>
+														Consultor (PJ)</h4><br>
+												<span class="lieu">Porto Alegre, RS</span>
+												<span class="dates">06/2015 - 06/2017</span>
+												<p>Atuei no desenvolvimento e manutenção em sistemas JAVA Web e Android​, confecção de scripts para envio ao cliente, teste e homologação de software, análise de logs, inconsistências e dúvidas enviadas pelos clientes, análise de requisitos, confecção de documentos de Visão e Orçamentos, desenvolvimento de indicadores de produtividade / qualidade, sugerir novos processos, desenvolvimento de análises críticas para melhoria dos processos existentes, Gestão e atendimento a clientes de Financial Services e Core Banking, palestras, treinamentos, apoio e gestão de equipes e processos.</p>
+										</li>
+										<li>
+												<h4>
+														<strong>Unilider LTDA</strong>
+														Analista de Trade Marketing</h4><br>
+												<span class="lieu">Serra, ES</span>
+												<span class="dates">11/2014 - 05/2015</span>
+												<p>Atuei no controle e divulgação de informações através do uso de Tabelas Dinâmicas e BI, uso avançado do Excel, Análise e controle de verbas, Análise de pedidos. Parametrização e envio de relatórios diários, Análise de dados de venda (volume e positivação), projeto BI Portal WEB, consultas à banco de dados e organização de eventos.</p>
+										</li>
+										<li>
+												<h4>
+														<strong>TOTVS SA</strong>
+														Analista de Negócios</h4><br>
+												<span class="lieu">Porto Alegre, RS</span>
+												<span class="dates">09/2013 - 09/2014</span>
+												<p>Atuei no desenvolvimento de indicadores de produtividade/qualidade e aspectos do negócio que devem ser monitorados, sugerir novos processos, desenvolvimento de análises críticas para melhoria dos processos existentes, gestão e atendimento a clientes de Financial Services e Core Banking, elaboração de planilhas, palestras e documentos gerenciais com indicadores, apoio e gestão de equipes e processos, análise de logs, inconsistências e dúvidas enviadas pelos clientes, apoio em desenvolvimento JAVA e todo processo de sustentação.</p>
+										</li>
+								</ul>
+						</div>
+
+						<!-- Formations -->
+						<div class="grid_16 formations">
+								<h3>Formação e cursos</h3>
+								<ul>
+										<li>
+												<h4>
+														<strong>Tecnólogo em Análise e Desenvolvimento de Sistemas</strong>
+														- ULBRA</h4>
+												<span class="lieu">Torres, RS</span>
+												<span class="dates">
+														07/2018 - 06/2021</span>
+												<p>O Curso Superior de Tecnologia em Análise e Desenvolvimento de Sistemas da Ulbra forma profissionais capazes de desenvolver sistemas utilizando os mais modernos ambientes de programação disponíveis no mercado da Tecnologia da Informação.</p>
+										</li>
+										<li>
+												<h4>
+														<strong>Ciências Contábeis</strong>
+														Univix</h4>
+												<span class="lieu">Vitória, ES</span>
+												<span class="dates">07/2012 - 07/2013</span>
+												<p>O Curso de Ciências Contábeis tem como objetivo principal desenvolver um perfil de profissional apto a assumir e desempenhar funções de contabilista com responsabilidade social e ética contribuindo para que as empresas atinjam seus objetivos e mantenha-se competitivas no mercado.</p>
+										</li>
+										<li>
+												<h4>
+														<strong>IOS Swift - Desenvolvimento Mobile</strong>
+														TargetTrust</h4>
+												<span class="lieu">Porto Alegre, RS</span>
+												<span class="dates">11/2016 - 12/2016</span>
+												<p>- 40h</p>
+										</li>
+										<li>
+												<h4>
+														<strong>Jquery - Criando Aplicações Web Ricas</strong>
+														TargetTrust</h4>
+												<span class="lieu">Porto Alegre, RS</span>
+												<span class="dates">10/2016 - 11/2016</span>
+												<p>- 40h</p>
+										</li>
+								</ul>
+						</div>
+
+						<!-- Loisirs -->
+						<div class="grid_8 loisirs">
+								<h3>Habilidades</h3>
+								<p>
+										Autodidata</p>
+								<p>Trabalho em equipe</p>
+								<p>Rápido aprendizado</p>
+								<p>Esforçado</p>
+						</div>
+
+						<!-- Contact -->
+						<div class="grid_8 contact">
+								<h3>Contato</h3>
+								<ul>
+										<li class="lieu">Torres, Rio Grande do Sul - BR</li>
+										<li class="phone">(51) 9.8043-6739</li>
+										<li class="mail">
+												<a href="mailto:rafaelminossi@rede.ulbra.br">rafaelminossi@rede.ulbra.br</a>
+										</li>
+										<li class="site">
+												<a href="http://www.githug.com/rminossi">githug.com/rminossi</a>
+										</li>
+										<li class="form">
+												<a class="toContactform" href="https://www.linkedin.com/in/rafael-minossi-nahas-792b5622/">Linkedin</a>
+										</li>
+								</ul>
+						</div>
+				</section>
+
+				<!-- Scripts JavaScript -->
+				<script src="files/jquery-1.js"></script>
+				<script src="files/validate.js"></script>
+				<script src="files/plugins.js"></script>
+
+		</body>
 </html>
